2003-03-04  Tommi Virtanen  <tv@lapdog>

	* twisted/scripts/mktap.py, twisted/internet/app.py: mktap now
	accepts --uid=0 and --gid=0 to really mean root, has command line
	help for --uid=/--gid=, and understands user and group names in
	addition to numbers.

2003-03-04  Tommi Virtanen  <tv@twistedmatrix.com>

	* twisted/scripts/tap2deb.py, doc/man/tap2deb.1: Option --version=
	collided with global options, renamed to --set-version=.

2003-03-01  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/scripts/twistd.py: Added --report-profile flag to twistd
	daemon.

2003-02-24  Brian Warner  <warner@lothar.com>

	* twisted/internet/tcp.py, base.py: set FD_CLOEXEC on all new
	sockets (if available), so they will be closed when spawnProcess
	does its fork-and-exec.

2003-02-23  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/scripts/manhole.py: 1.4 manhole now defaults to using a
	GTK2 client where available.  Start manhole with the "--toolkit gtk1"
	parameter if you want the old one back.

2003-2-19  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/monitor.py: Monitor web sites.

2003-2-20  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/internet/{app,default,interface,unix}.py: Add 'mode' argument
	to the listenUNIX interface, which sets the filesystem mode for the
        socket.

2003-2-18  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Release 1.0.4alpha1.

2003-2-18  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/server.py twisted/protocols/http.py: Add a way for
	resources (and other interested parties) to know when a request has
	finished, for normal or abnormal reasons.

2003-02-17  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/scripts/conch.py: Added experimental support for connection
	caching, where if a connection is already available to a server, the
	client will multiplex another session over the existing connection,
	rather that creating a new one.

2003-02-16  Jp Calderone  <exarkun@twistedmatrix.com>
