@@ -1,4 +1,10 @@
-2003-03-04  Tommi Virtanen  <tv@lapdog>
+2003-03-05  Itamar Shtull-Trauring  <itamar@itamarst.org>
+
+	* twisted/internet/: reactor.run() now accepts a keyword
+	argument, installSignalHandlers, indicating if signal handlers
+	should be installed.
+
+2003-03-04  Tommi Virtanen  <tv@twistedmatrix.com>
 
 	* twisted/scripts/mktap.py, twisted/internet/app.py: mktap now
 	accepts --uid=0 and --gid=0 to really mean root, has command line
